--- a/gap_to_julia/tasks/julia_package.yml
+++ b/gap_to_julia/tasks/julia_package.yml
@@ -125,46 +125,51 @@
 
 - name: Extract UUIDs of dependencies, weak dependencies, and extras
   shell: |
-    julia -e '
-      using Pkg
-      deps = {{ dependencies_names }}
-      weak_deps = {{ weak_dependencies_names }}
-      extras = {{ extras_names }}
-      deps_uuids = join(
-        [name * " = \"" * string(uuid) * "\"" 
-          for name in deps 
-          for (uuid, package) in Pkg.dependencies() 
-          if package.name == name
-        ], 
-        "\n"
-      )
-      weak_deps_uuids = join(
-        [name * " = \"" * string(uuid) * "\"" 
-          for name in weak_deps 
-          for (uuid, package) in Pkg.dependencies() 
-          if package.name == name
-        ], 
-        "\n"
-      )
-      extras_uuids = join(
-        [name * " = \"" * string(uuid) * "\"" 
-          for name in extras 
-          for (uuid, package) in Pkg.dependencies() 
-          if package.name == name
-        ], 
-        "\n"
-      )
-      uuids = deps_uuids * "&" * weak_deps_uuids * "&" * extras_uuids
-      println(uuids)
-      flush(stdout)
-    '
-  when: gen_full == '1' and dependencies
+    deps="{{ dependencies_names | join(" ") }}"
+    weak="{{ weak_dependencies_names | join(" ") }}"
+    extras="{{ extras_names | join(" ") }}"
+
+    # helper: extract a group of names
+    extract_group() {
+      group="$1"
+      out=""
+      for pkg in $group; do
+        line=$(grep "^$pkg " ./files/UUIDs || true)
+        if [ -n "$line" ]; then
+          # package found in UUIDs file → extract UUID
+          if [ -n "$out" ]; then
+            out="$out\n$line"
+          else
+            out="$line"
+          fi
+        else
+          # package not found → add warning line
+          missing="$pkg = \"Please run 'using Pkg; only(keys(filter(p -> p.second.name == \"$pkg\", Pkg.dependencies())))' and add it to 'PackageJanitor/gap_to_julia/files/UUIDs'\""
+          if [ -n "$out" ]; then
+            out="$out\n$missing"
+          else
+            out="$missing"
+          fi
+        fi
+      done
+      printf "$out"
+    }
+
+    deps_out=$(extract_group "$deps")
+    weak_out=$(extract_group "$weak")
+    extras_out=$(extract_group "$extras")
+
+    # concatenate groups with &
+    printf "%b&%b&%b\n" "$deps_out" "$weak_out" "$extras_out"
+  args:
+    chdir: "{{ playbook_dir }}"
   register: uuids
   changed_when: false
   vars:
-    dependencies_names: "{{ dependencies | to_json }}"
-    weak_dependencies_names: "{{ weak_dependencies | to_json }}"
-    extras_names: "{{ extras | to_json }}"
+    dependencies_names: "{{ dependencies }}"
+    weak_dependencies_names: "{{ weak_dependencies }}"
+    extras_names: "{{ extras }}"
+  when: gen_full == '1'
 
 - name: Extract the UUID from Project.toml if it exists
   shell: |
