Apply default(true) to list vars in julia_package
Ensure defaults are applied even when variables are defined but null/falsey, preventing type issues and keeping list types consistent.

--- a/gap_to_julia/tasks/julia_package.yml
+++ b/gap_to_julia/tasks/julia_package.yml
@@ -8,17 +8,17 @@
     target_package_path: "{{ lookup('env', 'HOME') }}/.julia/dev/{{ package.target }}/{{ package.name }}"
     package_version: "{{ package.version | default('0.1.0') }}"
     julia_version: "{{ package.julia_version | default('1.11') }}"
-    dependencies: "{{ package.dependencies | default([]) }}"
-    weak_dependencies: "{{ package.weak_dependencies | default([]) }}"
-    extras: "{{ package.extras | default([]) }}"
+    dependencies: "{{ package.dependencies | default([], true) }}"
+    weak_dependencies: "{{ package.weak_dependencies | default([], true) }}"
+    extras: "{{ package.extras | default([], true) }}"
     targets: "{{ package.targets | default({'test': 'default'}) }}"
-    test_imports: "{{ package.test_imports | default([]) }}"
+    test_imports: "{{ package.test_imports | default([], true) }}"
     extensions: "{{ package.extensions | default({}) }}"
     import_dependencies: "{{ package.import_dependencies | default(true) }}"
     pre_init_file_exists: "{{ package.pre_init_file_exists | default(false) }}"
     post_init_file_exists: "{{ package.post_init_file_exists | default(false) }}"
     disable_method_overwrite_warning: "{{ package.disable_method_overwrite_warning | default(false) }}"
-    cleanup_test_files_by_keywords: "{{ package.cleanup_test_files_by_keywords | default([]) }}"
+    cleanup_test_files_by_keywords: "{{ package.cleanup_test_files_by_keywords | default([], true) }}"
     playbook_dir_relative_to_home: "{{ playbook_dir | relpath(ansible_env.HOME) }}"
     gen_full: "{{ gen_full | default('1') }}"
 
