Force /bin/bash for authors awk pipeline
Prevents failures on systems where the default /bin/sh behaves differently. In Ubuntu the default sh is dash (not bash).

--- a/gap_to_julia/tasks/julia_package.yml
+++ b/gap_to_julia/tasks/julia_package.yml
@@ -95,6 +95,7 @@
     | awk '{print "\t\""$1" "$2" <"$3">\""}'
   args:
     chdir: '{{ source_package_path }}'
+    executable: /bin/bash
   register: authors
   when: gen_full == '1'
   changed_when: false
