--- a/site.yml
+++ b/site.yml
@@ -191,6 +191,29 @@
             tests_only_basic: true
             tests_without_precompiled_code: true
             has_subsplit: true
+          - name: FpLinearCategories
+            description: "Finitely presented linear categories by generating quivers and relations"
+            has_HOMALG_IO: true
+            doc_additional_latex_preamble: |
+              \usepackage{mathtools}
+              \usepackage{tikz-cd}
+              \DeclareUnicodeCharacter{2205}{\ensuremath{\emptyset}}
+              \DeclareUnicodeCharacter{2C76}{\ensuremath{\vdash}\!\!}
+              \DeclareUnicodeCharacter{2192}{\ensuremath{\!\!\rightarrow\!}}
+              \DeclareUnicodeCharacter{21AA}{\ensuremath{\!\!\hookrightarrow\!}}
+              \DeclareUnicodeCharacter{21A0}{\ensuremath{\!\!\twoheadrightarrow\!}}
+              \DeclareUnicodeCharacter{2B47}{\ensuremath{\!\!\xrightarrow{\sim}\!}}
+              \DeclareUnicodeCharacter{22C5}{\ensuremath{\cdot}}
+              \DeclareUnicodeCharacter{2297}{\ensuremath{\otimes}}
+            needed_other_repositories:
+              - homalg_project
+              - CAP_project
+              - FinSetsForCAP
+            tests_additional_packages_to_load:
+              - IO_ForHomalg
+            tests_only_basic: true
+            tests_without_precompiled_code: true
+            has_subsplit: true
           - name: FunctorCategories
             description: "Categories of functors"
             has_HOMALG_IO: true
