--- a/site.yml
+++ b/site.yml
@@ -535,7 +535,9 @@
             \lowercase{\gdef~{\ifnum\the\mathgroup=\m@ne \ell \else \lsb@l \fi}}%
             \endgroup
           tests_additional_packages_to_load:
-            - FinSetsForCAP
+            - Digraphs
+            - FinSetsForCAP ## load before FreydCategoriesForCAP
+            - FreydCategoriesForCAP
           needed_other_repositories:
             - homalg_project
             - CAP_project
