updated entry for HigherHomologicalAlgebra

--- a/site.yml
+++ b/site.yml
@@ -681,6 +681,7 @@
           - FinSetsForCAP
           - QPA2
           - FpCategories
+          - FpLinearCategories
           - Algebroids
           - PreSheaves
           - QuotientCategories
